// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AnalyticsPage renenderTabContent should render Billing Tab 1`] = `
<div>
  <Component />
</div>
`;

exports[`AnalyticsPage renenderTabContent should render Detailed Tab 1`] = `
<div>
  <Connect(Component) />
</div>
`;

exports[`AnalyticsPage should match a snapshot 1`] = `
<Connect(ErrorBoundary)>
  <Component
    flexColumn={true}
    hasPadding={true}
  >
    <Component
      flexColumn={true}
      hasBackground={true}
      hasPadding={true}
    >
      <Component>
        Dashboard
      </Component>
      <div
        className="column is-half-desktop"
      >
        <Component
          tabConfigs={
            Array [
              Object {
                "active": true,
                "displayText": "DETAILED",
                "onTabClick": [Function],
                "tabIdentifier": "detailed",
              },
              Object {
                "active": false,
                "displayText": "BILLING",
                "onTabClick": [Function],
                "tabIdentifier": "billing",
              },
            ]
          }
        />
      </div>
      <div>
        <Connect(Component) />
      </div>
    </Component>
  </Component>
</Connect(ErrorBoundary)>
`;
